# k8s-webserver-with-inference-job-demo

./: .gitignore  404.html  README.md  index.html  mkdocs.yml
.github/workflows/: build-api-docker.yaml  build.yaml  docker-publish.yml  docs.yaml
app/: index.html
apps/api/: .dockerignore  Dockerfile  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
apps/api/src/api/: main.py
apps/webserver/: Dockerfile  main.py
demo_app/: index.html
demo_app/infrastructure/: index.html
demo_app/platform/: index.html
demo_app/the_app/: index.html
docs/: app.md  index.md  lessons.md  list_of_technologies.md
docs/demo_app/: index.md  infrastructure.md  platform.md
docs/presentation/: copy-paste.md  exercises.md  index.md
docs/what_is_k8s/: index.md  working_with_k8s.md
infrastructure/terraform/: aks.tf  main.tf
k8s/: api-deployment.yaml  api-service.yaml  auth.yaml  webserver.yaml  workflow.yaml
k8s/argo-workflows/: application.yaml  cm-artifact-repo-patch.yaml  ingress.yaml  kustomization.yaml  sa-default-patch.yaml
k8s/argocd/: argocd-grpc-ingress.yaml  argocd-http-ingress.yaml  argocd-server-cmd-patch.yaml  kustomization.yaml  values.yaml
k8s/demo/: api-deployment.yaml  application.yaml  auth.yaml  deployment.yaml  ingress-tls.yaml  ingress.yaml  rbac.yaml  service.yaml  serviceaccount.yaml  (+1 more)
lessons/: index.html
list_of_technologies/: index.html
presentation/: index.html
scripts/: build-and-push-docker.sh  build_and_push.sh  set-up-argo-workflows.sh  set-up-argocd.sh
search/: search_index.json
what_is_k8s/: index.html
(+15 files in other folders)
